Added aljibe-kickstart command and updated site-install script

--- a/aljibe-kickstart/.gitignore
+++ b/aljibe-kickstart/.gitignore
@@ -76,3 +76,7 @@ node_modules/
 
 # Generated artifact by metadrop/drupal-artifact-builder
 deploy-artifact
+
+# DDEV
+/.ddev/docker-compose.ci.yaml
+settings.ddev.site
