--- a/install.yaml
+++ b/install.yaml
@@ -3,15 +3,17 @@ description:
 project_files:
  - aljibe-kickstart
  - commands
+ - site-profiles
 
 post_install_actions:
+# Auto install disabled by default
 #   - |
 #     ddev aljibe-kickstart
-#   - |
-#      ddev get ddev/ddev-adminer
-#      ddev get ../ddev-addons/ddev-mkdocs
-#      ddev get ../ddev-addons/ddev-backstopjs
-#      ddev get ../ddev-addons/ddev-lighthouse
-#      ddev get ../ddev-addons/ddev-selenium
-#      ddev get ../ddev-addons/ddev-pa11y
-#      ddev get ../ddev-addons/ddev-aljibe-assistant
+  - |
+     ddev get ddev/ddev-adminer
+     ddev get ../ddev-addons/ddev-mkdocs
+     ddev get ../ddev-addons/ddev-backstopjs
+     ddev get ../ddev-addons/ddev-lighthouse
+     ddev get ../ddev-addons/ddev-selenium
+     ddev get ../ddev-addons/ddev-pa11y
+     ddev get ../ddev-addons/ddev-aljibe-assistant
