--- a/install.yaml
+++ b/install.yaml
@@ -11,9 +11,9 @@ post_install_actions:
 #     ddev aljibe-kickstart
   - |
      ddev get ddev/ddev-adminer
-     ddev get ../ddev-addons/ddev-mkdocs
-     ddev get ../ddev-addons/ddev-backstopjs
-     ddev get ../ddev-addons/ddev-lighthouse
-     ddev get ../ddev-addons/ddev-selenium
-     ddev get ../ddev-addons/ddev-pa11y
+     ddev get Metadrop/ddev-mkdocs
+     ddev get Metadrop/ddev-backstopjs
+     ddev get Metadrop/ddev-lighthouse
+     ddev get Metadrop/ddev-selenium
+     ddev get Metadrop/ddev-pa11y
      ddev get ../ddev-addons/ddev-aljibe-assistant
