Issue #0: Added new config system

--- a/install.yaml
+++ b/install.yaml
@@ -4,6 +4,8 @@ project_files:
  - aljibe-kickstart
  - commands
  - site-profiles
+ - web-build
+ - aljibe.yaml
 
 post_install_actions:
 # Auto install disabled by default
