--- a/web-build/Dockerfile
+++ b/web-build/Dockerfile
@@ -1,4 +1,4 @@
 #ddev-generated
 RUN wget https://github.com/mikefarah/yq/releases/latest/download/yq_linux_amd64 -O /usr/bin/yq &&\
-        chmod +x /usr/bin/yq \
+        chmod +x /usr/bin/yq
 RUN echo "Built on $(date)" > /build-date.txt
