Added script to fix adminer-norouter file

--- a/install.yaml
+++ b/install.yaml
@@ -14,4 +14,5 @@ post_install_actions:
 #     ddev aljibe-kickstart
 
   - ./scripts/install-dependencies.sh
+  - ./scripts/fix-adminer-norouter.sh
   - test -f aljibe.yaml || cp aljibe.yaml.example aljibe.yaml
