Updated tests to test only on stable ddev version

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -23,7 +23,7 @@ jobs:
   code_quality:
     strategy:
       matrix:
-        ddev_version: [stable, HEAD]
+        ddev_version: [stable]
       fail-fast: false
     runs-on: ubuntu-latest
     steps:
