--- a/aljibe-kickstart/tests/behat/local/behat.yml
+++ b/aljibe-kickstart/tests/behat/local/behat.yml
@@ -1,6 +1,6 @@
 default:
   autoload:
-    "": "%paths.base%/tests/functional/behat/bootstrap/"
+    "": "%paths.base%/../local/bootstrap/"
   formatters:
     pretty:
       verbose: false
@@ -11,7 +11,7 @@ default:
   suites:
     default:
       paths:
-        - "%paths.base%/tests/functional/behat/features/"
+        - "%paths.base%/features/"
       filters:
         tags: "~@exclude"
       contexts:
