--- a/aljibe-kickstart/tests/behat/local/behat.yml
+++ b/aljibe-kickstart/tests/behat/local/behat.yml
@@ -1,6 +1,6 @@
 default:
   autoload:
-    "": "%paths.base%/../local/bootstrap/"
+    "": "%paths.base%/bootstrap/"
   formatters:
     pretty:
       verbose: false
@@ -62,7 +62,7 @@ default:
       ajax_timeout: 5
       browserkit_http: ~
       browser_name: "chrome"
-      base_url: "https://web"
+      base_url: "http://web"
       show_cmd: lynx %s
       files_path: "%paths.base%/tests/functional/behat/files"
       javascript_session: selenium2
