--- a/aljibe-kickstart/tests/behat/pro/behat.yml
+++ b/aljibe-kickstart/tests/behat/pro/behat.yml
@@ -62,7 +62,7 @@ default:
       ajax_timeout: 5
       browserkit_http: ~
       browser_name: "chrome"
-      base_url: "https://web"
+      base_url: "https://example.com"
       show_cmd: lynx %s
       files_path: "%paths.base%/tests/functional/behat/files"
       javascript_session: selenium2
