--- a/aljibe.yaml.example
+++ b/aljibe.yaml.example
@@ -31,3 +31,9 @@ theme_paths:
 hooks:
   pre_setup: []
   post_setup: []
+  pre_site_install: []
+  post_site_install: []
+  pre_site_install_config: []
+  post_site_install_config: []
+  pre_site_install_db: []
+  post_site_install_db: []
