--- a/install.yaml
+++ b/install.yaml
@@ -7,6 +7,7 @@ project_files:
  - aljibe.yaml.example
  - site-profiles
  - web-build
+ - config.aljibe.yaml
 
 post_install_actions:
   - ./scripts/install-dependencies.sh
