Update behat.yml to add common folder bootstrap

--- a/aljibe-kickstart/tests/behat/local/behat.yml
+++ b/aljibe-kickstart/tests/behat/local/behat.yml
@@ -1,6 +1,7 @@
 default:
   autoload:
-    "": "%paths.base%/bootstrap/"
+    - '%paths.base%/bootstrap/'
+    - '%paths.base%/../common/boostrap/'
   formatters:
     pretty:
       verbose: false
