--- a/install.yaml
+++ b/install.yaml
@@ -8,6 +8,8 @@ project_files:
  - site-profiles
  - config.aljibe.yaml
 
+ddev_version_constraint: '>= v1.23.5'
+
 post_install_actions:
   - ./scripts/install-dependencies.sh
   - test -f aljibe.yaml || cp aljibe.yaml.example aljibe.yaml
