Automatically add external_links to all services to enable access to domains in the web container

--- a/config.aljibe.yaml
+++ b/config.aljibe.yaml
@@ -1,2 +1,10 @@
 #ddev-generated
+fail_on_hook_fail: True
 hooks:
+  pre-start:
+   - exec-host: |
+       if pip3 show PyYAML &>/dev/null; then
+         ddev propagate-external-links
+       else
+         echo "[ERROR] Aljibe requires python with yaml extension."
+       fi
