--- a/aljibe-kickstart/composer.json
+++ b/aljibe-kickstart/composer.json
@@ -55,6 +55,7 @@
             "composer/installers": true,
             "cweagans/composer-patches": true,
             "drupal/core-composer-scaffold": true,
+            "liborm85/composer-vendor-cleaner": true,
             "dealerdirect/phpcodesniffer-composer-installer": true,
             "phpstan/extension-installer": true,
             "phpro/grumphp": true,
