--- a/aljibe-kickstart/composer.json
+++ b/aljibe-kickstart/composer.json
@@ -55,13 +55,13 @@
             "composer/installers": true,
             "cweagans/composer-patches": true,
             "drupal/core-composer-scaffold": true,
-            "liborm85/composer-vendor-cleaner": true,
             "dealerdirect/phpcodesniffer-composer-installer": true,
             "phpstan/extension-installer": true,
             "phpro/grumphp": true,
             "metadrop/drupal-boilerplate-assistant": true,
             "metadrop/composer-comments": true,
-            "php-http/discovery": true
+            "php-http/discovery": true,
+            "liborm85/composer-vendor-cleaner": true
         }
     },
     "scripts": {
