--- a/aljibe-kickstart/composer.json
+++ b/aljibe-kickstart/composer.json
@@ -22,22 +22,10 @@
     "require": {
         "composer/installers": "^2.2",
         "cweagans/composer-patches": "^1.7",
-        "drupal/admin_toolbar": "^3.4",
-        "drupal/components": "^3.0@beta",
-        "drupal/config_split": "^2.0",
-        "drupal/core-composer-scaffold": "^10.0",
-        "drupal/core-recommended": "^10.0",
-        "drupal/environment_indicator": "^4.0",
-        "drupal/honeypot": "^2.0",
-        "drupal/metatag": "^2.0",
-        "drupal/pathauto": "^1.8",
-        "drupal/radix": "^5.0",
-        "drupal/redirect": "^1.6",
-        "drupal/simple_sitemap": "^4.1",
-        "drupal/stage_file_proxy": "^2.0",
-        "drupal/ultimate_cron": "^2.0@alpha",
-        "drupal/webform": "^6.2",
-        "drush/drush": "^12.0",
+        "drupal/core-composer-scaffold": "^11.0",
+        "drupal/core-recommended": "^11.0",
+        "drupal/radix": "^6.0",
+        "drush/drush": "^13.0",
         "metadrop/drupal-artifact-builder": "^1.4"
     },
     "require-dev": {
@@ -60,7 +48,11 @@
             "phpro/grumphp": true,
             "metadrop/drupal-boilerplate-assistant": true,
             "metadrop/composer-comments": true,
-            "php-http/discovery": true
+            "php-http/discovery": true,
+            "tbachert/spi": true,
+            "liborm85/composer-vendor-cleaner": true,
+            "metadrop/backstopjs-addons": true,
+            "mxr576/ddqg-composer-audit": true
         }
     },
     "scripts": {
