fix: Fixing some problems with drupal multiversion and verbose output on install

--- a/install.yaml
+++ b/install.yaml
@@ -3,7 +3,7 @@ description:
 project_files:
  - commands
  - scripts
- - aljibe-kickstart
+ - kickstart
  - aljibe.yaml.example
  - site-profiles
  - config.aljibe.yaml
