Fixed behat not ignoring invalid certificates

--- a/kickstart/common/tests/behat/local/behat.yml
+++ b/kickstart/common/tests/behat/local/behat.yml
@@ -84,6 +84,7 @@ default:
         capabilities:
           browser: "chrome"
           extra_capabilities:
+            acceptInsecureCerts: true
             chromeOptions:
               w3c: false
               args:
