Fixed .gitignore to ignore .gitignore from scaffold in web folder

--- a/kickstart/common/.gitignore
+++ b/kickstart/common/.gitignore
@@ -34,6 +34,10 @@
 /web/profiles/contrib/
 /web/libraries/
 
+## Scaffold
+/web/.gitignore
+
+
 ## Sensitive information.
 /web/sites/*/settings.local.php
 
