--- a/install.yaml
+++ b/install.yaml
@@ -7,6 +7,8 @@ project_files:
  - aljibe.yaml.example
  - site-profiles
  - config.aljibe.yaml
+ - homeadditions/.composer/keys.dev.pub
+ - homeadditions/.composer/keys.tags.pub
 
 ddev_version_constraint: '>= v1.24.1'
 
