Refactor testr.yml file for GitHub
- Do not test for md files
- Remove write permissions (apparently not requried)
- Remove strategy for code quailiy job because it is not really used as
there is onnly one variant
- Functional tests afains DEV stable and HEAD
- Add support for remote SSH debugging
- Use modern input approach to access inputs

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,29 +1,34 @@
 name: tests
 on:
   pull_request:
+    paths-ignore:
+      - "**.md"
   push:
+    branches:
+      - main
+      - 'tests**'
+    paths-ignore:
+      - "**.md"
 
   schedule:
-  - cron: '00 07 * * *'
+  - cron: '00 07 * * 0'
 
+  # Manual trigger with optional debug using SSH.
+  # See https://github.com/mxschmitt/action-tmate
   workflow_dispatch:
     inputs:
       debug_enabled:
         type: boolean
-        description: Debug with tmate
+        description: Debug with tmate (SSH access)
         required: false
         default: false
 
-# This is required for "gautamkrishnar/keepalive-workflow", see "ddev/github-action-add-on-test"
 permissions:
-  actions: write
+  contents: read
 
 jobs:
+  # Job for code quality checks.
   code_quality:
-    strategy:
-      matrix:
-        ddev_version: [stable]
-      fail-fast: false
     runs-on: ubuntu-latest
     steps:
       - name: "Check out code"
@@ -32,21 +37,33 @@ jobs:
         uses: a5k-actions/shellchecker@v0
         with:
           severity: error
+
+  # Actual functional tests.
   tests:
     strategy:
       matrix:
-        ddev_version: [stable]
+        ddev_version: [stable, HEAD]
       fail-fast: false
-
     runs-on: ubuntu-latest
 
     steps:
+      # Add support for tmate debugging if requested.
+      - name: Setup Tmate Debugging
+        if: ${{ github.event.inputs.debug_enabled == 'true' }}
+        uses: mxschmitt/action-tmate@v3
+        with:
+          # This key is usually needed to keep the connection open
+          limit-access-to-actor: true
+
+      # Sets Bash in a strict fashion.
       - name: Action Setup Bash
         uses: release-engineers/action-setup-bash@v1
+
+      # Official DDEV action to test add-ons.
       - uses: ddev/github-action-add-on-test@v2
         with:
           ddev_version: ${{ matrix.ddev_version }}
           token: ${{ secrets.GITHUB_TOKEN }}
-          debug_enabled: ${{ github.event.inputs.debug_enabled }}
-          addon_repository: ${{ env.GITHUB_REPOSITORY }}
-          addon_ref: ${{ env.GITHUB_REF }}
+          debug_enabled: ${{ inputs.debug_enabled }}
+          addon_repository: ${{ github.repository }}
+          addon_ref: ${{ github.ref }}
